# llm-rag-mcp-orchestrator

./: README.md
backend/: .env.example  explore_mcp.py  explore_tavily.py  pyproject.toml
backend/config/: config.yaml
backend/config/llm/: gemini.yaml  ollama.yaml
backend/src/: main.py
backend/src/backend/: __init__.py  api.py  config.py  pricer.py
backend/src/backend/agent/: __init__.py  ask.py  base.py  chat.py
backend/src/backend/api/: __init__.py  models.py  routes.py
backend/src/backend/core/: __init__.py  agent.py  chat.py  embed.py  reply.py
backend/src/backend/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  pricer.py  protocol.py  registry.py  tool.py
backend/src/backend/mcp/: __init__.py  agent.py  client.py  handler.py
backend/src/backend/metrics/: __init__.py  tracker.py
backend/src/backend/orchestrator/: __init__.py  moderator.py  nodes.py  orchestrator.py  reflector.py  router.py  services.py  state.py
backend/src/backend/rag/: __init__.py  agent.py  client.py  index.py
backend/src/backend/safety/: __init__.py  classifier.py  filters.py
backend/src/backend/talk/: __init__.py  agent.py  talker.py  tools.py
backend/src/backend/tools/: __init__.py  finance.py
data/: multi-agent-systems.md  rag-architecture.md  rag-explained.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  ChatComponent.tsx
images/: orchestration.drawio
services/: pyproject.toml
services/src/mcp_services/: __init__.py
services/src/mcp_services/finance/: server.py
services/src/mcp_services/weather/: server.py
